--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Quantitative researcher & developer at ADIA, the sovereign wealth fund of Abu Dhabi. Former data scientist and researcher in Silicon Valley."
   location         : "Abu Dhabi, UAE"
-  employer         : "Abu Dhabi Investment Authority (ADIA)"
+  employer         : "Abu Dhabi Investment Authority"
   uri              : # URL
   email            : "echow@alumni.princeton.edu" 
 
