--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Evan Chow / Quantitative research & development"
 title_separator          : "-"
 name                     : &name "Your Name"
-description              : &description "The R&D site of Evan Chow."
+description              : &description "The research and development site of Evan Chow."
 url                      : https://evnchw.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "evnchw/evnchw.github.io"
