--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # https://elizabethmcd.github.io/github-pages-intro/02-ghpages-personalize/
 main:
   - title: "Research"
-    url: /publication/
+    url: /publications/
 
   # - title: "Talks"
     # url: /talks/    
