--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ numpy = "^1.26.4"
 scipy = "^1.13.0"
 pandas = "^2.2.2"
 matplotlib = "^3.9.0"
+cvxportfolio = "^1.3.2"
+seaborn = "^0.13.2"
+loguru = "^0.7.2"
+tqdm = "^4.66.4"
+polars = "^0.20.26"
+music21 = "^9.1.0"
 
 
 [build-system]
