--- a/_config.yml
+++ b/_config.yml
@@ -257,6 +257,24 @@ defaults:
       author_profile: true
       share: true
       comments: true
+  # _quant
+  - scope:
+      path: ""
+      type: quant
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _music
+  - scope:
+      path: ""
+      type: music
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
   # _portfolio
   - scope:
       path: ""
