--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Evan Chow"
   pronouns         : # example: "she/her"  
   bio              : "Quantitative researcher & developer at ADIA, the sovereign wealth fund of Abu Dhabi. Formerly worked in Silicon Valley."
-  location         : "Abu Dhabi, UAE"
+  location         : "Worldwide"
   employer         : "Abu Dhabi Investment Authority"
   uri              : # URL
   email            : "echow@alumni.princeton.edu" 
