--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Evan Chow"
   pronouns         : # example: "she/her"  
-  bio              : "Quantitative researcher & data scientist at ADIA, the sovereign wealth fund of Abu Dhabi. Formerly worked in tech."
+  bio              : "Quantitative researcher & data scientist at ADIA, the sovereign wealth fund of Abu Dhabi. Formerly worked in Silicon Valley tech."
   location         : "Worldwide"
   employer         : "Abu Dhabi Investment Authority"
   uri              : # URL
