--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,11 @@
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
 
+plugins:
+  - jekyll-remote-theme
+remote_theme           : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
 # Basic Site Settings
 locale                   : "en-US"
 title                    : "Evan Chow / Quantitative research & development"
