--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,11 @@
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
 
-plugins:
-  - jekyll-remote-theme
-remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+# https://github.com/academicpages/academicpages.github.io/issues/137
+# plugins:
+#   - jekyll-remote-theme
+# remote_theme           : "mmistakes/minimal-mistakes"
+# minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Basic Site Settings
 locale                   : "en-US"
@@ -154,6 +155,9 @@ include:
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
+  # exclude "assets" for custom theme
+  # https://github.com/academicpages/academicpages.github.io/issues/137
+  # - assets
   - .asset-cache
   - .bundle
   - .jekyll-assets-cache
