--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   avatar           : "profile.png"
   name             : "Evan Chow"
   pronouns         : # example: "she/her"  
-  bio              : "Quantitative researcher & data scientist at ADIA, the sovereign wealth fund of Abu Dhabi. Formerly worked in Silicon Valley tech (Snap, Uber)."
+  bio              : "Quantitative researcher & data scientist at ADIA, the sovereign wealth fund of Abu Dhabi. Formerly worked in Silicon Valley tech (Snap, Uber). Princeton & LSE grad. All views are mine."
   location         : "Worldwide"
   employer         : "Abu Dhabi Investment Authority"
   uri              : # URL
